changed SW series

--- a/onScreen-filer/sheet001.htm
+++ b/onScreen-filer/sheet001.htm
@@ -71,13 +71,14 @@ else
   <td class=xl66>Diff</td>
   <td>VCU1</td>
   <td>2.9.52</td>
-  <td></td>
+  <td>no update</td>
  </tr>
  <tr height=25 style='height:18.5pt'>
   <td height=25 style='height:18.5pt'></td>
   <td class=xl65></td>
   <td>SSM</td>
-  <td colspan=2 style='mso-ignore:colspan'></td>
+  <td>3.4.5</td>
+  <td></td>
  </tr>
  <tr height=25 style='height:18.5pt'>
   <td height=25 style='height:18.5pt'></td>
